Fix hover line box overflow

--- a/skeleton/template/_framework/assets/css/main.css
+++ b/skeleton/template/_framework/assets/css/main.css
@@ -50,6 +50,7 @@
     right: -1px;
     background: #333;
     padding: 10px;
+    overflow: auto;
     display: none;
 }
 
